# loomcli

./: .gitignore  CHANGELOG.md  GEMINI.md  LICENSE  README.md  build-binary.sh  loomcli.spec  pyproject.toml  surface_index.json  surface_known_gaps.json
.github/workflows/: ci.yml  publish.yml
benchmarks/: .gitignore  schema_efficiency.py  task_corpus.yaml
benchmarks/results/: schema_efficiency_20260424_011134.csv  schema_efficiency_20260424_011134_summary.json
deploy/reconciler/: .env.example  Dockerfile  docker-compose.yml  powerloom-reconciler.service  setup-ec2.sh
docs/: commands.generated.md  surface-index.md
docs/memory-evolution/: efficiency-benchmark-results.md
examples/minimal/: agent-mcp-server.yaml  agent-skill.yaml  agent.yaml  convention.yaml  credential.yaml  failure-recovery-frame.yaml  group-membership.yaml  group.yaml  mcp-deployment.yaml  mcp-server-registration.yaml  memory-policy.yaml  ou.yaml  role-binding.yaml  scope.yaml  skill-access-grant.yaml  skill.yaml  type-definition.yaml  workflow-type.yaml  workflow.yaml
examples/reference-fleet/: README.md  bootstrap.ps1  bootstrap.sh
loomcli/: __init__.py  __main__.py  auth.py  cli.py  client.py  command_registry.py  config.py  plugin_assets.py
loomcli/_open/: __init__.py  auth_bootstrap.py  git_ops.py  hooks_install.py  launch_cache.py  mcp_install.py  preflight.py  resume.py  rules_sync.py  runtime_configs_install.py  runtime_exec.py  session_reg.py  skill_updates.py  skills_install.py
loomcli/commands/: __init__.py  agent_cmd.py  agent_daemon.py  agent_observe_cmd.py  agent_register.py  agent_session_cmd.py  antigravity_worker_cmd.py  apply.py  approval_cmd.py  audit_cmd.py  auth_cmd.py  batch_cmd.py  commands_cmd.py  compose_cmd.py  conventions_cmd.py  describe.py  destroy.py  doctor_cmd.py  enforce_check_cmd.py  gc_cmd.py  get.py  import_.py  import_project_cmd.py  migrate_cmd.py  milestone_cmd.py  open_cmd.py  plan.py  plugin_cmd.py  profile_cmd.py  project_cmd.py  reveal_cmd.py  session_cmd.py  setup_cmd.py  skill_cmd.py  sprint_cmd.py  thread_cmd.py  workflow_cmd.py
loomcli/manifest/: __init__.py  addressing.py  applier.py  handlers.py  jsonschema_validator.py  parser.py  planner.py  schema.py
loomcli/schema/: __init__.py  launch_spec.py
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: home-mode.md  weave-agent-status.md  weave-apply.md  weave-ask.md  weave-chat.md  weave-diagnose.md  weave-login.md  weave-manifest.md  weave-my-work.md  weave-plan.md  weave-pluck-thread.md  weave-session-tail.md  weave-status.md  weave-thread.md
plugin/hooks/: hooks.json
plugins/: README.md
scripts/: build_surface_index.py  generate_command_docs.py  generate_reference_fleet.py  generate_schema_package.py  validate_reference_fleet.py  validate_v2_refs.py  validate_v2_shape_parity.py
tests/: conftest.py  test_addressing.py  test_agent_cmd.py  test_agent_daemon.py  test_agent_session_cli.py  test_antigravity_worker.py  test_applier.py  test_approval_justification.py  test_approval_wait.py  test_auth_cli.py  test_auto_json_output.py  test_cli_smoke.py  test_command_docs.py  test_command_registry.py  test_conventions_cmd.py  test_daemon_deployment_credential.py  test_doctor_launch_readiness.py  test_doctor_plugin_cmd.py  test_enforce_check_cmd.py  test_env_access_token.py  test_gc_cmd.py  test_import_project_cli.py  test_kind_registry_conformance.py  test_machine_credential_refresh.py  test_machine_credential_storage.py  test_migrate_v1_to_v2.py  test_milestone_cmd.py  test_open_auth_bootstrap.py  test_open_cmd.py  test_open_git_ops.py  test_open_hooks_install.py  test_open_launch_cache.py  test_open_mcp_install.py  test_open_preflight.py  test_open_resume.py  test_open_rules_sync.py  test_open_runtime_configs_install.py  test_open_runtime_exec.py  test_open_session_reg.py  test_open_skill_updates.py  (+18 more)
(+227 files in other folders)
